<resources>
    <string name="app_name">Mitahara</string>
    <string name="title_activity_signin">signin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="muted_new_user">I am a new user,</string>
    <string name="action_sign_up"><i>Sign Up</i></string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_pass_desc">Enter the email address associated<br></br>with your account</string>
    <string name="continue_text">Continue</string>
    <string name="reset_verif">Verify</string>
    <string name="reset_verif_title">Verification</string>
    <string name="reset_verif_desc">Enter the verification code we just<br>sent you on your email address</br></string>
    <string name="create_new_pass">Create New Password</string>
    <string name="create_new_pass_desc">Your password must be different from<br>previously used password</br></string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="art1_text1">A healthful diet means eating nutrient dense foods, in the
        <br>right quantities, from all the major food groups. People</br>
        <br>often think of “a diet” as a specific weight loss plan, but</br>
        <br>diet simply refers to the types and amounts of food a</br>
        <br>person eats.</br></string>

    <!-- Article 1 -->
    <string name="art1_title">HOW TO FOLLOW A HEALTHFUL DIET</string>
    <string name="art1_SubTitle">Food and Beverage</string>
    <string name="art1_author">Luthfiana Arifah</string>
    <string name="homepage">Home</string>
    <string name="timeThumb1">8 min</string>

    <!-- Article 2 -->
    <string name="art2_title">SPORTS CAN Make YOU A BETTER</string>
    <string name="art2_SubTitle">Sport and Workout</string>
    <string name="timeThumb2">4 min</string>


    <!-- DAILY CALORIES BOX -->
    <!-- TODO: HUBUNGKAN KUANTITAS DAILY KALORI LEWAT DATA YANG DIINPUT USER SAAT REGISTER -->
    <string name="dailycaloriesprefix">Your daily calories limit</string>
    <string name="dailycaloriesvalue">4000 kCal</string>

    <string name="You_Can">You Can</string>
    <string name="Want_to_diet">Want To Diet More Effectively? It’s<br>A Long Tough Road, so We’ll help You Out </br></string>
    <string name="Start_now">Start Now</string>
    <string name="Get_your_dream">Get Your Dream Body With The Most<br>Comfortable Diet For You </br></string>
    <string name="Create_your_acc">Create Your Account</string>
    <string name="next">Next</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcometxt">A Platform Where You Can Maintain<br>Your Healthiness Easily</br></string>
    <string name="your_daily_calory_limit">Your Daily Calory Limit</string>
    <string name="workout_article">
        Regular exercises offer countless benefits. It boosts your immune system, improves your bone health and lowers health risks like heart problem, diabetes and many more life threatening diseases. These are 10 Excercise that you can easily do everyday:
    </string>
    <string name="workout_article_2">
        Remember, health is wealth. It’s never too late to start! Be determined, take out some time from your busy day and start these simple exercises at home and stay happy and healthy!
    </string>
    <string name="workout_list">
        <li>Jumping Jacks</li>
        <li>Plank</li>
        <li>Cross Crunches</li>
        <li>Side Plank</li>
        <li>Squats</li>
    </string>
</resources>