<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.signin">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signin_image"
        android:layout_width="279dp"
        android:layout_height="281dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="51dp"
        android:contentDescription="@string/title_activity_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/prompt_email"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="60sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/prompt_password"
        android:layout_gravity="center_vertical"
        app:endIconMode="password_toggle"
        android:layout_marginTop="128sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButton"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="210sp"
        android:text="@string/action_sign_in_short"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FC696E"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="290sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgotpass"
        android:textSize="13sp"
        />
    <TextView
        android:id="@+id/newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="312sp"
        android:layout_marginRight="30sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/muted_new_user"
        android:textSize="13sp"
        />
    <TextView
        android:id="@+id/signup_newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="312sp"
        android:layout_marginLeft="53sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/action_sign_up"
        android:textColor="#FC696E"
        android:textSize="13sp"
        />
</FrameLayout>

