<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/welcome2_image"
        android:layout_width="305dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="72sp"
        app:srcCompat="@drawable/welcome2"
        android:contentDescription="@string/You_Can"

        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginBottom="300dp"
        app:srcCompat="@drawable/dot2"
        android:contentDescription="@string/welcometxt"

        />

    <TextView
        android:id="@+id/You_Can"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/You_Can"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="480sp"
        android:layout_marginEnd="110sp"

        />
    <TextView
        android:id="@+id/want_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Want_to_diet"
        android:fontFamily="@font/poppins"
        android:textColor="#000000"
        android:textSize="13sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="521sp"
        android:layout_marginEnd="29sp"
        />

    <Button
        android:id="@+id/next_welcome2"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="260dp"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FC696E"
        android:textSize="18sp"
        />

</FrameLayout>