<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.signin">

    <TextView
        android:id="@+id/welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Create_your_acc"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signin_image"
        android:layout_width="279dp"
        android:layout_height="281dp"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/title_activity_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/prompt_email"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="60sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/prompt_password"
        android:layout_gravity="center_vertical"
        app:endIconMode="password_toggle"
        android:layout_marginTop="128sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_form_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/confirm_password"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="196sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_newuser"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="260dp"
        android:text="@string/action_sign_in_short"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FC696E"
        android:textSize="18sp"
        />


</FrameLayout>

