<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboarding.screen.ThirdScreen">

    <ImageView
        android:id="@+id/welcome3_image"
        android:layout_width="305dp"
        android:layout_height="300dp"
        android:contentDescription="@string/Start_now"
        android:src="@drawable/welcome3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.401" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/dot3"
        android:contentDescription="@string/welcometxt"

        />

    <TextView
        android:id="@+id/You_Can"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Start_now"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome3_image"
        />

    <TextView
        android:id="@+id/want_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/Get_your_dream"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/You_Can"
        android:paddingHorizontal="25dp"
        />

    <Button
        android:id="@+id/next_signup"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:backgroundTint="#FC696E"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/action_sign_up_short"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/next_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/want_to"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/next_signin"
        android:fontFamily="@font/poppins_bold"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:text="@string/action_sign_in_short"
        android:textColor="#000000"
        android:backgroundTint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/next_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/want_to"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>