<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reset_password">

    <ImageView
        android:id="@+id/img_reset_pass"
        android:layout_width="193dp"
        android:layout_height="188dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120sp"
        android:contentDescription="@string/reset_pass"
        app:srcCompat="@drawable/img_reset_pass"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="160dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_pass_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="470sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/resetpass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#000000"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="330sp"
        />

    <TextView
        android:id="@+id/resetpass_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="371sp"
        android:fontFamily="@font/poppins"
        android:text="@string/reset_pass_desc"
        android:textAlignment="center"
        android:textColor="#171717"
        android:textSize="14sp" />

    <Button
        android:id="@+id/reset_pass_button"
        android:layout_width="331dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="200sp"
        android:layout_marginRight="40sp"
        android:backgroundTint="#FC696E"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/continue_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="7sp"/>

</FrameLayout>