<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_new_password">

    <ImageView
        android:id="@+id/img_create_new_password"
        android:layout_width="193dp"
        android:layout_height="188dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120sp"
        android:contentDescription="@string/create_new_pass"
        app:srcCompat="@drawable/img_create_new_password"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="160dp" />

    <TextView
        android:id="@+id/create_new_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_pass"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#000000"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="330sp"
        />

    <TextView
        android:id="@+id/create_new_password_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="371sp"
        android:fontFamily="@font/poppins"
        android:text="@string/create_new_pass_desc"
        android:textAlignment="center"
        android:textColor="#171717"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/prompt_password"
        android:layout_gravity="center_vertical"
        app:endIconMode="password_toggle"
        android:layout_marginTop="128sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        app:cornerRadius="10sp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="192sp"
        android:layout_marginRight="40sp"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/confirm_password"
        app:cornerRadius="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm_reset_password_button"
        android:layout_width="331dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="262sp"
        android:layout_marginRight="40sp"
        android:backgroundTint="#FC696E"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_pass"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="7sp" />


</FrameLayout>